# zephyr-m5stack-sticks3

./: .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Kconfig  README.md  llms.txt  verify.sh
.github/workflows/: ci.yml
app/: CMakeLists.txt  Kconfig  overlay-audio.conf  overlay-ble.conf  overlay-ir.conf  overlay-psram.conf  overlay-wifi.conf  overlay-wifi.overlay  prj.conf
app/src/: audio.c  audio.h  audio_dsp.c  audio_dsp.h  battery.c  battery.h  ble.c  ble.h  font.c  font.h  gfx.c  gfx.h  ir.c  ir.h  main.c  nec.c  nec.h  pages.h  psram.c  psram.h  status.c  status.h  ui.c  ui.h  wifi.c  wifi.h  wifi_glue.c  wifi_glue.h
docs/: 00_RESEARCH_SNAPSHOT.md  00_RESEARCH_SNAPSHOT_UPDATED.md  01_ARCHITECTURE_OVERVIEW.md  02_SDD.md  03_TDD.md  04_AGILE_BACKLOG.md  05_VALIDATION_MATRIX.md  06_RISK_REGISTER.md  07_UPSTREAM_PLAN.md  08_TOOLING_SETUP.md  09_SOURCES.md  10_HARDWARE_FLASHING_NOTES.md  14_RECORD_PLAYBACK_DESIGN.md
docs/adr/: 0001-use-out-of-tree-board-first.md  0001-wifi-station-mode.md  0002-pin-map-source-of-truth.md  0004-es8311-upstream-engage-pr107660.md  0005-esp32-rmt-engage-pr101448.md
docs/drafts/: es8311-upstream-comments.md
docs/issues/: 0001-rfc-m5pm1-full-driver.md  0002-enh-ir-rmt.md  0003-enh-es8311-audio.md  0004-enh-power-measurement.md  0007-es8311-upstream-readiness.md
drivers/: CMakeLists.txt  Kconfig
drivers/adc/: CMakeLists.txt  Kconfig.m5pm1  adc_m5pm1.c
drivers/audio/: CMakeLists.txt  Kconfig  Kconfig.es8311  emul_es8311.c  es8311.c
drivers/gpio/: CMakeLists.txt  Kconfig.m5pm1  gpio_m5pm1.c
drivers/mfd/: CMakeLists.txt  Kconfig  Kconfig.m5pm1  emul_m5pm1.c  mfd_m5pm1.c
drivers/regulator/: CMakeLists.txt  Kconfig  emul_m5pm1.c  (+1 more)
evidence/: 20260531-m5pm1-adc-power.md  20260601-hw011-012-p4-ble.md  20260601-ir-hw-session.md  20260605-hw016-audio-capture.md  20260606-hw016e-live-mic-meter.md  README.md
scripts/: bootstrap_zephyr_ubuntu.sh  build_demo.sh  build_m5sticks3.sh  build_wifi.sh  check_es8311_upstream_gate.sh  flash_m5sticks3.sh  flash_windows.ps1  monitor_capture_windows.py  monitor_m5sticks3.sh  monitor_windows.ps1  test_check_es8311_gate.sh
tests/drivers/audio_dsp/: CMakeLists.txt  testcase.yaml
tests/drivers/audio_dsp/src/: main.c
tests/drivers/battery/: CMakeLists.txt  testcase.yaml
tests/drivers/battery/src/: main.c
tests/drivers/ir_nec/: CMakeLists.txt  testcase.yaml
tests/drivers/ir_nec/src/: main.c
tests/drivers/wifi/: CMakeLists.txt  testcase.yaml
tests/drivers/wifi/src/: main.c
tools/: check_file_integrity.py
zephyr/: module.yml
(+29 files in other folders)
